# ohos-mindspore

./: .editorconfig  build-profile.json5
AppScope/resources/base/element/: string.json
inference/: build-profile.json5  oh-package-lock.json5  oh-package.json5
inference/src/main/: module.json5
inference/src/main/cpp/: CMakeLists.txt  CMakePresets.json  napi_init.cpp
inference/src/main/cpp/include/: api.hpp  backend.hpp  context.hpp  types.hpp
inference/src/main/cpp/include/inference/: context.hpp  napi_helpers.hpp  types.hpp
inference/src/main/cpp/include/inference/core/: dtype.hpp  layout.hpp  shape.hpp  tensor.hpp
inference/src/main/cpp/src/: api.cpp  backend.cpp  context.cpp  core.cpp
inference/src/main/cpp/tests/: CMakeLists.txt
inference/src/main/cpp/tests/host/: CMakeLists.txt  test_shape.cpp
inference/src/main/cpp/types/libinference/: Index.d.ts  oh-package.json5
inference/src/main/ets/inferenceAbility/: InferenceAbility.ets
inference/src/main/ets/inferenceBackupAbility/: InferenceBackupAbility.ets
inference/src/main/ets/pages/: Index.ets  imagenet1k_id_to_class.ets
inference/src/main/resources/base/element/: float.json  string.json
